# gta-cli

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  meson.build  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  sonar.yml  style-check.sh
.hooks/: pre-commit
src/: main.c  streams.c  streams.h
test/: convert_raw_to_der.py  test_cli.sh  test_opc.sh  test_opc_option1.sh
test/test_data/: attr_value_test.txt  ctx_attr.txt  ctx_attr_opc.txt  subject.der  subjectAltName.der
